chore: sync - push all local changes

--- a/Servidor/.env.example
+++ b/Servidor/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development
 
 # MongoDB Atlas URI
 # Formato: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?retryWrites=true&w=majority
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/denuncias_db?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://174449_db_user:1997281qA@cluster0.feeeugl.mongodb.net/denuncias_db?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Secret
 JWT_SECRET=tu_clave_secreta_super_segura_aqui
@@ -12,12 +12,6 @@ JWT_SECRET=tu_clave_secreta_super_segura_aqui
 # JWT Expiration (en segundos o formato string: '1h', '7d', etc.)
 JWT_EXPIRES_IN=86400
 
-# Configuración de Email (para recuperación de contraseña)
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=tu_email@gmail.com
-EMAIL_PASSWORD=tu_password_de_aplicacion
-EMAIL_FROM=noreply@denuncias.com
 
 # URL del frontend (para links en correos)
 FRONTEND_URL=http://localhost:5173
