--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:full": "node start-dev.js",
+    "dev:backend": "cd Servidor && npm run dev",
+    "dev:frontend": "vite",
+    "init-db": "cd Servidor && npm run init-db",
+    "verify-db": "node verify-db.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "leaflet": "^1.9.4",
+    "mongoose": "^9.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
