feat: Implementar autenticación Google OAuth 2.0 y optimizar dashboards
- Integrar Google OAuth con flujo popup alternativo
- Agregar hook useGoogleAuth para manejo de autenticación
- Crear página GoogleCallback para OAuth redirect
- Actualizar modelo Usuario con soporte para Google ID
- Optimizar dashboards de ciudadano y autoridad
- Agregar tests para HomePage y denuncias
- Mejorar UI/UX del sistema de login

--- a/Servidor/.env.example
+++ b/Servidor/.env.example
@@ -4,14 +4,20 @@ NODE_ENV=development
 
 # MongoDB Atlas URI
 # Formato: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?retryWrites=true&w=majority
-MONGODB_URI=mongodb+srv://174449_db_user:1997281qA@cluster0.feeeugl.mongodb.net/denuncias_db?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://tu_usuario:tu_password@cluster.mongodb.net/tu_base_de_datos?retryWrites=true&w=majority
 
-# JWT Secret
-JWT_SECRET=tu_clave_secreta_super_segura_aqui
+# JWT Secret (genera una clave aleatoria segura)
+JWT_SECRET=genera_una_clave_secreta_aleatoria_aqui
 
 # JWT Expiration (en segundos o formato string: '1h', '7d', etc.)
 JWT_EXPIRES_IN=86400
 
+# Configuración de Email (para recuperación de contraseña)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=tu_email@gmail.com
+EMAIL_PASSWORD=tu_password_de_aplicacion
+EMAIL_FROM=noreply@denuncias.com
 
 # URL del frontend (para links en correos)
 FRONTEND_URL=http://localhost:5173
@@ -19,3 +25,8 @@ FRONTEND_URL=http://localhost:5173
 # Configuración de archivos
 UPLOAD_DIR=uploads
 MAX_FILE_SIZE=5242880
+
+# Google OAuth 2.0
+# Obtén tus credenciales en: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=tu_google_client_id_aqui.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=tu_google_client_secret_aqui
