--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "verify-db": "node verify-db.js",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:backend": "cd Servidor && npm test"
   },
   "dependencies": {
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.561.0",
     "mongoose": "^9.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -28,14 +33,20 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "@vitest/ui": "^4.0.15",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "vite": "npm:rolldown-vite@7.1.14"
+    "jsdom": "^27.3.0",
+    "vite": "npm:rolldown-vite@7.1.14",
+    "vitest": "^4.0.15"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
