--- a/Servidor/package.json
+++ b/Servidor/package.json
@@ -5,12 +5,16 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "NODE_ENV=production node server.js",
     "dev": "nodemon server.js",
     "init-db": "node src/scripts/initDatabase.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
-    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage"
+    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "pm2:start": "pm2 start ecosystem.config.json",
+    "pm2:stop": "pm2 stop denuncias-backend",
+    "pm2:restart": "pm2 restart denuncias-backend",
+    "pm2:logs": "pm2 logs denuncias-backend"
   },
   "keywords": [
     "denuncias",
